# zed-tree-sitter-ansible

./: Cargo.toml  README.md  binding.gyp  go.mod  package.json  pyproject.toml
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ansible/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAnsibleTests/: TreeSitterAnsibleTests.swift
src/: parser.c
