[package]
name = "tree-sitter-ansible"
description = "Ansible grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ansible"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/kartikvashistha/zed-tree-sitter-ansible"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.92"
